--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                     <button class="btn" id="btn-yes" onclick="showResponse()">Yes!</button>
                     <button class="btn" id="btn-no" onmouseover="dodgeButton()" onclick="persuade()">Ayoko nga! 😤</button>
                 </div>
-                <p class="response">Yaaaaaayyyy!💖<br>Can't wait to see you on Valentine's Day! 🌸</p>
+                <p class="response">Yaaaaaayyyy!💖<br>Can't wait to see you on Valentine's Day, My Bebengloves! 🌸</p>
             </div>
         </div>
         <div class="hearts" id="hearts"></div>
