--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             <div class="card">
                 <p class="question" id="question">Will you be my Valentine? 🌹</p>
                 <div class="buttons">
-                    <button class="btn" id="btn-yes" onclick="showResponse()">Yes!</button>
+                    <button class="btn" id="btn-yes" onclick="showResponse()">Opkorz!</button>
                     <button class="btn" id="btn-no" onmouseover="dodgeButton()" onclick="persuade()">Ayoko nga! 😤</button>
                 </div>
                 <p class="response">Yeheeeeettt!💖<br>Can't wait to see you on Valentine's Day, My Bebengloves!🌸<br>
@@ -264,8 +264,8 @@
             "Ayoko nga! 😤",
             "Makulit ka ba? 😠",
             "Sino ka ba!? 😡",
-            "Sapakin ko mukha mo! 👊",
-            "Baliw ka ba? 🤪",
+            "Valentine's ka mag-isa mo! 👊",
+            "Abnoy ka ba? 🤪",
             "Di ka naman si Aaron Pierre! 🐻",
             "Aw hell nah! 💀",
         ];
