--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Valentine's Surprise</title>
+    <title>Open Me!</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Pacifico&display=swap');
 
@@ -156,7 +156,6 @@
             opacity: 0;
             transform: translateY(20px);
             transition: all 0.5s ease;
-            background-image: ;
         }
 
         .response.visible {
